<resources>
    <string name="app_name">Школьное расписание Корнея</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_whats_now">Что сейчас?</string>
    <string name="title_lessons_schedule">Расписание уроков</string>
    <string name="title_lessons_schedule_short">Расписание</string>
    <string name="title_my_teachers">Мои учителя</string>
    <string name="title_my_teachers_short">Учителя</string>
    <string name="title_calls_schedule">Расписание звонков</string>
    <string name="title_calls_schedule_short">Звонки</string>
    <string name="title_timeslot_subject">Предмет</string>
    <string name="title_subjects">Предметы</string>
    <string name="title_1_lesson">Первый урок</string>
    <string name="title_2_lesson">Второй урок</string>
    <string name="title_3_lesson">Третий урок</string>
    <string name="title_4_lesson">Четвёртый урок</string>
    <string name="title_5_lesson">Пятый урок</string>
    <string name="title_6_lesson">Шестой урок</string>
    <string name="title_lesson">%1$d урок</string>

    <string name="teacher1_initial_first_name">Иван</string>
    <string name="teacher1_initial_second_name">Иванович</string>
    <string name="teacher1_initial_family">Математиков</string>
    <string name="teacher2_initial_first_name">Аврора</string>
    <string name="teacher2_initial_second_name">Валентиновна</string>
    <string name="teacher2_initial_family">Хомякова</string>
    <string name="teacher3_initial_first_name">Евгения</string>
    <string name="teacher3_initial_second_name">Викторовна</string>
    <string name="teacher3_initial_family">Физкультурова</string>
    <string name="teacher_1_name_title">имя учителя</string>
    <string name="teacher_2_name_title">отчество учителя</string>
    <string name="teacher_3_name_title">фамилия учителя</string>
    <string name="save_button_title">Сохранить</string>
    <string name="delete_button_title">Удалить</string>
    <string name="add_button_title">Добавить</string>
    <string name="teacher_details_title">Данные учителя</string>
    <string name="teacher_details_new_title">Новый учитель</string>
    <string name="subject1_name">Математика</string>
    <string name="subject_place1">203</string>
    <string name="subject_place2">Спортзал</string>
    <string name="subject2_name">Русский язык</string>
    <string name="subject3_name">Английский язык</string>
    <string name="subject4_name">Физкультура</string>
    <string name="subject_name_title">название предмета</string>
    <string name="subject_room_no_title">место проведения/кабинет</string>
    <string name="subject_teacher_name_title">кто ведёт предмет?</string>
    <string name="subject_details_fragment_title">Предмет</string>
    <string name="subject_details_new_fragment_title">Новый предмет</string>
    <string name="subject_details_roomNo_title">Кабинет:</string>
    <string-array name="weekdays_array">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
    <string name="dialog_option_get_photo_from_camera">Сфотографировать</string>
    <string name="dialog_option_get_photo_from_gallery">Выбрать фото</string>
    <string name="dialog_option_get_photo_title">Сделать фото учителя</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab1_hint">Добавить</string>
    <string name="now_is_going">Сейчас идёт</string>
    <string name="time_to_call_text">До звонка осталось:</string>
    <string name="after_that_text">Потом</string>
    <string name="lessons_finished_take_a_rest">Уроки закончились, отдыхаем, делаем домашнее задание!</string>
    <string name="good_morning_dont_be_late">Доброе утро! Не опоздай в школу!</string>
    <string name="today_is_weekend_take_a_rest">Сегодня выходной, отдыхаем!</string>
    <string name="its_a_school_break">Перемена!</string>
    <string name="go_home">Домой!</string>
    <string name="home_work_hint">Введите сюда домашнее задание или что нужно взять с собой на урок</string>
    <string name="change_subject">Сменить предмет</string>
    <string name="home_work_fragment_title">Домашнее задание</string>
    <string name="dont_forget_books">Не забыть взять с собой учебники и тетради!</string>
</resources>
