<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_whatsNow"
        android:icon="@drawable/ic_schedule_black_24dp"
        android:title="@string/title_whats_now" />
    <item
        android:id="@+id/navigation_lessons_schedule"
        android:icon="@drawable/ic_today_black_24dp"
        android:title="@string/title_lessons_schedule_short" />
    <item
        android:id="@+id/navigation_myTeachers"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_my_teachers_short" />
    <item
        android:id="@+id/navigation_callsSchedule"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_calls_schedule_short" />
    <item
        android:id="@+id/navigation_subjects"
        android:icon="@drawable/ic_school_black_24dp"
        android:title="@string/title_subjects" />

</menu>
