<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="subjectDetailsViewModel"
            type="com.meranged.schoolschedule.ui.subjectdetails.SubjectDetailsViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/subject_details_cl"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/subject_name_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:ems="10"
                android:hint="@string/subject_name_title"
                android:inputType="textPersonName"
                android:text = "@={subjectDetailsViewModel.subject.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/room_no_title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/subject_details_roomNo_title"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="@+id/subject_room_no_editText"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/subject_room_no_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:ems="10"
                android:hint="@string/subject_room_no_title"
                android:inputType="textPersonName"
                android:text="@={subjectDetailsViewModel.subject.roomNumber}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/room_no_title_textView"
                app:layout_constraintTop_toBottomOf="@+id/subject_name_editText" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/subject_teacher_name_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:ems="10"
                android:hint="@string/subject_teacher_name_title"
                android:inputType="textPersonName"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subject_room_no_editText" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_button_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/save_button"
                app:layout_constraintTop_toBottomOf="@+id/subject_teacher_name_editText" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button_title"
                app:layout_constraintEnd_toStartOf="@+id/delete_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subject_teacher_name_editText" />




        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
